BUILDING ANGULAR 2 COMPONENTS ON THE FLY

--- a/src/app/workspace/home/home.html
+++ b/src/app/workspace/home/home.html
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div hidden>HomeComponent</div>
+<div class="plate" [style.top.px]="getX()" [style.left.px]="getY()">
+  <h2>This is {{name}} Home dynamic component prototype</h2>
+</div>
