--- a/src/app/workspace/home/home.html
+++ b/src/app/workspace/home/home.html
@@ -1,4 +1,7 @@
 <div hidden>HomeComponent</div>
-<div class="plate" [style.top.px]="getX()" [style.left.px]="getY()">
-  <h2>This is {{name}} Home dynamic component prototype</h2>
+<div class="plate">
+
+    <h2>This is {{name}} Home dynamic component prototype</h2>
+
+
 </div>
