--- a/src/resources/assets/scss/lib/components/_home_component.scss
+++ b/src/resources/assets/scss/lib/components/_home_component.scss
@@ -1,5 +1,6 @@
 .plate {
             width: 250px;
+            height: 250px;
             position: absolute;
             border: 1px solid gray;
             border-radius: 5px;
