--- a/src/resources/assets/scss/app.scss
+++ b/src/resources/assets/scss/app.scss
@@ -2,6 +2,7 @@
 //include bootstrap 4.0.0 alpha.2
 //
 @import '../../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import 'lib/_spiner.scss';
 @import 'lib/components/_app_component.scss';
 @import 'lib/components/_workspace_component.scss';
 @import 'lib/components/_login_component.scss';
